# space_game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
assets/shaders/: Builtin.ObjectShader.frag  Builtin.ObjectShader.vert
engine/: CMakeLists.txt
engine/include/: defines.h  entry.h  game_types.h
engine/include/containers/: darray.h
engine/include/core/: application.h  asserts.h  event.h  filesystem.h  input.h  logger.h  smemory.h  space_memory.h  space_string.h  sstring.h
engine/include/math/: math_types.h  math_types.inl  smath.h
engine/include/memory/: linear_allocator.h
engine/lib/: CMakeLists.txt
engine/src/containers/: darray.c
engine/src/core/: application.c  clock.c  clock.h  event.c  input.c  logger.c  smemory.c  space_memory.c  space_string.c  sstring.c
engine/src/math/: smath.c
engine/src/memory/: linear_allocator.c
engine/src/platform/: filesystem.c  platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_result.c  vulkan_shader_module.c  vulkan_shader_module.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl
engine/src/renderer/vulkan/shaders/: vulkan_object_shader.c  vulkan_object_shader.h
engine/src/resources/: resource_types.h
game/: CMakeLists.txt
testbed/: CMakeLists.txt
testbed/src/: entry.c  game.c  game.h  main.c
